test/Fail/AttributeUnparenthesized.err
AttributeUnparenthesized.agda:4.12: error: [ParseError]
@<ERROR> 0 A → A → A

-- Should fail.
...
